Homepage visuals fixed on mobile

--- a/src/scss/main.module.scss
+++ b/src/scss/main.module.scss
@@ -3,7 +3,7 @@
 .main {
     height: 100vh;
     width: 100%;
-    background-image: url("/mainpagebg.png");
+    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('/mainpagebg.png');
     background-repeat: no-repeat;
     background-size: cover;
 
@@ -24,20 +24,33 @@
         line-height: 54px;
         letter-spacing: 0em;
 
-        color: var(--foreground);
+        color: var(--background);
         background: var(--menu-bg);
+
+        margin-left: max(16.5rem, calc(1% + 1rem));
+        margin-right: min(16.5rem, calc(1% + 1rem));
+        @include small-screen {
+            margin-left: max(6.5rem, calc(1% + 1rem));
+            margin-right: min(6.5rem, calc(1% + 1rem));
+        }
     }
 
     .corner_nav {
         position: absolute;
         top: 0px;
         right: 0px;
+        left: 0px;
         margin: 1em;
+        margin-left: 17rem;
 
         display: flex;
         flex-direction: row;
-        @mixin small-screen {
+        justify-content: end;
+
+        @include small-screen {
             flex-direction: column;
+            margin-left: 7rem;
+            align-items: flex-end;
         }
 
         .nav_button {
@@ -46,8 +59,8 @@
             margin: 1em;
 
             background-color: var(--foreground);
-            font-family: Montserrat;
-            font-weight: 800;
+            width: min(16em, calc(100vw - 7rem));
+            height: fit-content;
 
             .nav_button_text {
                 display: block;
@@ -57,6 +70,7 @@
                 background-color: var(--menu-bg);
                 font-family: Montserrat;
                 font-weight: 800;
+                font-size: 1rem;
             }
         }
     }
